# fightpass-cancel-tooling

./: .gitignore  CHANGELOG.md  README.md  cancel_subscriptions.py  config.example.json  pyproject.toml  report_cancellation_log.py  requirements.txt  setup_env.sh
configs/: config.example.json  config.revoke.prod.json  config.revoke.test.json  config.validate.prod.json  config.validate.test.json
scripts/: cancel_subscriptions.py  report_cancellation_log.py
